--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                     développement et en programmation avec certains des langages les plus utilisés. Je suis également
                     très intéressé par le développement web depuis que j'en ai fait dans mes années lycée, plus
                     particulièrement la partie front-end et tout ce qui touche à l'html et au css !
+                    Je crois fort en l'efficacité de cette formation dans mon apprentissage du métier de développeur et je suis convaincu qu'elle m'aidera à aquerir l'état d'esprit propice à la création de mon projet de jeu vidéo !
                 </p>
                 <img class="inkcat2" src="ressources/inkcat2.svg">
             </div>
@@ -157,7 +158,7 @@
         <section class="section sgalerie">
             <h1 id="sc5">- Galerie -</h1>
             <div class="sc5-pg1 sc-page">
-                <p>* Voici un aperçu des certains de mes travaux/work in progress :</p>
+                <p>* Voici un aperçu de certains de mes travaux/work in progress :</p>
                 <div class="wips">
                     <div class="carousel">
                         <ul class="slides">
