update et corrections

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="bjr-eth">
                     <p>* Bonjour à tous ! Je m'appelle Ethan !</p><br>
                     <p>* J'ai 18 ans, et je suis passionné d'art graphique de musiques et de jeux vidéos.
-                        Je suis déssinateur, compositeur de musique et bientôt développeur
+                        Je suis dessinateur, compositeur de musique et bientôt développeur
                         indépendant de jeux vidéos !
                     </p>
                 </div>
@@ -92,12 +92,13 @@
             <div class="sc2-pg2 sc-page">
                 <img class="campus26" src="ressources/campus26.png">
                 <p>* Je suis actuellement en formation de développement web et web mobile.
-                    Cette formation consiste à me permettre de maitriser les languages essentiels à la création de pages
+                    Cette formation consiste à me permettre de maitriser les langages essentiels à la création de pages
                     web et à la gestion leur contenu. J'ai intégré cette formation pour me construire une base solide en
                     développement et en programmation avec certains des langages les plus utilisés. Je suis également
                     très intéressé par le développement web depuis que j'en ai fait dans mes années lycée, plus
                     particulièrement la partie front-end et tout ce qui touche à l'html et au css !
-                    Je crois fort en l'efficacité de cette formation dans mon apprentissage du métier de développeur et je suis convaincu qu'elle m'aidera à aquerir l'état d'esprit propice à la création de mon projet de jeu vidéo !
+                    Je crois fort en l'efficacité de cette formation dans mon apprentissage du métier de développeur et je suis convaincu qu'elle m'aidera à aquérir l'état d'esprit propice à la création de mon projet de jeu vidéo !
+                    Je compte me servir des compétences que j'aurai acquis avec cette formation pour booster mes futurs projets et les faire connaître grâce à mes propres futur sites web !
                 </p>
                 <img class="inkcat2" src="ressources/inkcat2.svg">
             </div>
