--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
                         <li>Ouvert d'esprit</li>
                         <li>Passionné</li>
                         <li>Motivé</li>
+                        <li>Courtois</li>
+                        <li>Assidu</li>
                     </ul>
                 </div>
 
