--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="bjr-eth">
                     <p>* Bonjour à tous ! Je m'appelle Ethan !</p><br>
                     <p>* J'ai 18 ans, et je suis passionné d'art graphique de musiques et de jeux vidéos.
-                        Je suis dessinateur, compositeur de musique et bientôt développeur
+                        Je suis dessinateur, compositeur de musique et bientôt développeur web et développeur
                         indépendant de jeux vidéos !
                     </p>
                 </div>
