add bootstrap au projet

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="ressources/fav/favicon.ico">
     <title>Ethan LERIGAB (BauKo.) - Portfolio</title>
@@ -97,8 +100,11 @@
                     développement et en programmation avec certains des langages les plus utilisés. Je suis également
                     très intéressé par le développement web depuis que j'en ai fait dans mes années lycée, plus
                     particulièrement la partie front-end et tout ce qui touche à l'html et au css !
-                    Je crois fort en l'efficacité de cette formation dans mon apprentissage du métier de développeur et je suis convaincu qu'elle m'aidera à aquérir l'état d'esprit propice à la création de mon projet de jeu vidéo !
-                    Je compte me servir des compétences que j'aurai acquis avec cette formation pour booster mes futurs projets et les faire connaître grâce à mes propres futur sites web !
+                    Je crois fort en l'efficacité de cette formation dans mon apprentissage du métier de développeur et
+                    je suis convaincu qu'elle m'aidera à aquérir l'état d'esprit propice à la création de mon projet de
+                    jeu vidéo !
+                    Je compte me servir des compétences que j'aurai acquis avec cette formation pour booster mes futurs
+                    projets et les faire connaître grâce à mes propres futur sites web !
                 </p>
                 <img class="inkcat2" src="ressources/inkcat2.svg">
             </div>
