réparation header et navmenu

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <header class="menu-bar">
         <img class="bk-logo" src="ressources/bk.png">
         <img class="star" src="ressources/star.png">
-        <h1 class="portfo">Portfolio - Ethan LERIGAB (BauKo.)</h1>
+        <h1 class="portfo">Portfolio<br/>Ethan LERIGAB (BauKo.)</h1>
         <ul class="ancres">
             <li class="nav-item"><a class="nav-link" href="#sc1">Profil</a></li>
             <li class="nav-item"><a class="nav-link" href="#sc2">Formation</a></li>
-            <li class="nav-item"><a class="nav-link" href="#sc3">Compétences & Affinités</a></li>
+            <li class="nav-item"><a class="nav-link" href="#sc3">Compétences</a></li>
             <li class="nav-item"><a class="nav-link" href="#sc4">Projets</a></li>
             <li class="nav-item"><a class="nav-link" href="#sc5">Galerie</a></li>
-            <li class="nav-item"><a class="nav-link" href="#sc6">Contact & Résaux</a></li>
+            <li class="nav-item"><a class="nav-link" href="#sc6">Contact</a></li>
         </ul>
         <div class="hamburger">
             <span class="bar"></span>
@@ -128,19 +128,19 @@
                     <p>* Mes affinités en langages de programmation sont les suivantes :</p>
                     <ul class="exception">
                         <li>HTML</li>
-                        <div class="bar"><span class="progress html"></span></div>
+                        <div class="bar"><span class="elprogress html"></span></div>
                         <li>CSS</li>
-                        <div class="bar"><span class="progress css"></span></div>
+                        <div class="bar"><span class="elprogress css"></span></div>
                         <li>PHP</li>
-                        <div class="bar"><span class="progress php"></span></div>
+                        <div class="bar"><span class="elprogress php"></span></div>
                         <li>SQL</li>
-                        <div class="bar"><span class="progress sql"></span></div>
+                        <div class="bar"><span class="elprogress sql"></span></div>
                         <li>JAVASCRIPT</li>
-                        <div class="bar"><span class="progress js"></span></div>
+                        <div class="bar"><span class="elprogress js"></span></div>
                         <li>C#</li>
-                        <div class="bar"><span class="progress cs"></span></div>
+                        <div class="bar"><span class="elprogress cs"></span></div>
                         <li>PYTHON</li>
-                        <div class="bar py-bar"><span class="progress py"></span></div>
+                        <div class="bar py-bar"><span class="elprogress py"></span></div>
                     </ul>
                 </div>
             </div>
@@ -167,7 +167,7 @@
         <section class="section sgalerie">
             <h1 id="sc5">- Galerie -</h1>
             <div class="sc5-pg1 sc-page">
-                <p>* Voici un aperçu de certains de mes travaux/work in progress :</p>
+                <p>* Voici un aperçu de certains de mes travaux/work in elprogress :</p>
                 <div class="wips">
                     <div class="carousel">
                         <ul class="slides">
