passage des images en webp (hors caroussel)

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <header class="menu-bar">
-        <img class="bk-logo" src="ressources/bk.png">
-        <img class="star" src="ressources/star.png">
+        <img class="bk-logo" src="ressources/webp/bk.webp">
+        <img class="star" src="ressources/webp/star.webp">
         <h1 class="portfo">Portfolio<br/>Ethan LERIGAB (BauKo.)</h1>
         <ul class="ancres">
             <li class="nav-item"><a class="nav-link" href="#sc1">Profil</a></li>
@@ -35,7 +35,7 @@
         <section class="section sprofil">
             <h1 id="sc1">- Profil -</h1>
             <div class="sc1-pg1 sc-page">
-                <img class="bauko-logo" src="ressources/bauko.png">
+                <img class="bauko-logo" src="ressources/webp/bauko.webp">
                 <div class="bjr-eth">
                     <p>* Bonjour à tous ! Je m'appelle Ethan !</p><br>
                     <p>* J'ai 18 ans, et je suis passionné d'art graphique de musiques et de jeux vidéos.
@@ -56,14 +56,14 @@
                     </p>
                 </div>
                 <div>
-                    <img class="draw" src="ressources/draw.png">
+                    <img class="draw" src="ressources/webp/draw.webp">
                 </div>
             </div>
 
             <div class="sc1-pg3 sc-page">
                 <div class="grp-screen">
-                    <img class="screen" src="ressources/blender.png">
-                    <img class="screen" src="ressources/unity.png">
+                    <img class="screen" src="ressources/webp/blender.webp">
+                    <img class="screen" src="ressources/webp/unity.webp">
                 </div>
                 <p>* J'aimerai beaucoup par exemple apprendre la création de modèles et d'animations 3D (personnages ou
                     environement)
@@ -93,7 +93,7 @@
                 </p>
             </div>
             <div class="sc2-pg2 sc-page">
-                <img class="campus26" src="ressources/campus26.png">
+                <img class="campus26" src="ressources/webp/campus26.webp">
                 <p>* Je suis actuellement en formation de développement web et web mobile.
                     Cette formation consiste à me permettre de maitriser les langages essentiels à la création de pages
                     web et à la gestion leur contenu. J'ai intégré cette formation pour me construire une base solide en
@@ -167,7 +167,7 @@
         <section class="section sgalerie">
             <h1 id="sc5">- Galerie -</h1>
             <div class="sc5-pg1 sc-page">
-                <p>* Voici un aperçu de certains de mes travaux/work in elprogress :</p>
+                <p>* Voici un aperçu de certains de mes travaux/work in progress :</p>
                 <div class="wips">
                     <div class="carousel">
                         <ul class="slides">
