update et work du carousel

--- a/index.html
+++ b/index.html
@@ -169,7 +169,58 @@
             <div class="sc5-pg1 sc-page">
                 <p>* Voici un aperçu de certains de mes travaux/work in progress :</p>
                 <div class="wips">
-                    
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                                aria-label="Slide 4"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="/ressources/carousel/webp/CL - RoA.webp" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Clairen - Rivals Of Aether</h5>
+                                    <p>Fan art d'un personnage de jeu vidéo</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/ressources/carousel/webp/aseprite.webp" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Pixel Art - Projet MF</h5>
+                                    <p>Un sprite de mon projet de jeu vidéo</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/ressources/carousel/webp/blender2.webp" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Third slide label</h5>
+                                    <p>Some representative placeholder content for the third slide.</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/ressources/carousel/webp/nocturne.webp" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Fourth slide label</h5>
+                                    <p>Some representative placeholder content for the fourth slide.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                     <div class="music">
                         <p>* Et voilà quelques musiques de mon projet de jeu "Midnight's Fable" :</p>
                         <audio controls>
@@ -197,7 +248,7 @@
             <div class="sc6-pg1 sc-page">
                 <p>* MAIL: ethanlerigab@gmail.com</p>
                 <p>* TÉL.: 07 67 08 21 95</p>
-                <p>* DISCORD: BauKo.#1414</p><br>
+                <p>* DISCORD: bocal.#1414</p><br>
                 <p>* TWITTER: <a target="_blank" href="https://twitter.com/BauKoArt">@BauKoArt</a></p>
                 <p>* INSTAGRAM: <a target="_blank" href="https://www.instagram.com/bauko.art/">@bauko.art</a></p>
                 <p>* SOUNDCLOUD: <a target="_blank" href="https://soundcloud.com/bauko">BauKo.</a></p>
@@ -213,6 +264,9 @@
         </footer>
     </div>
     <script src="script.js" async defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
