--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="ressources/fav/favicon.ico">
-    <title>Ethan LERIGAB (BauKo.) - Portfolio</title>
+    <title>Ethan "BauKo." LERIGAB - Portfolio</title>
 </head>
 
 <body>
     <header class="menu-bar">
         <img class="bk-logo" src="ressources/webp/bk.webp">
         <img class="star" src="ressources/webp/star.webp">
-        <h1 class="portfo">Portfolio<br />Ethan LERIGAB (BauKo.)</h1>
+        <h1 class="portfo">Portfolio<br />Ethan "BauKo." LERIGAB</h1>
         <ul class="ancres">
             <li class="nav-item"><a class="nav-link" href="#sc1">Profil</a></li>
             <li class="nav-item"><a class="nav-link" href="#sc2">Formation</a></li>
@@ -113,7 +113,7 @@
             <h1 id="sc3">- Compétences & Affinités -</h1>
             <div class="sc3-pg1 sc-page">
                 <div class="talent-box">
-                    <p>* Comptétences :</p>
+                    <p>* Qualités :</p>
                     <ul class="talents">
                         <li>Créatif</li>
                         <li>Ouvert d'esprit</li>
@@ -167,6 +167,23 @@
         <section class="section sgalerie">
             <h1 id="sc5">- Galerie -</h1>
             <div class="sc5-pg1 sc-page">
+                <p>* Quelques uns de mes dessins :</p>
+                <div>
+                    <div class="pics picsrow1">
+                        <img src="/ressources/carousel/webp/CL - RoA.webp" class="pic rounded float-start" alt="...">
+                        <img src="/ressources/carousel/webp/fate.webp" class="pic rounded float-end" alt="...">
+                        <img src="/ressources/carousel/webp/imagination.webp" class="pic rounded float-end" alt="...">
+                        <img src="/ressources/carousel/webp/legend.webp" class="pic rounded float-end" alt="...">
+                        <img src="/ressources/carousel/webp/mf.webp" class="pic rounded float-end" alt="...">
+                    </div>
+                    <div class="pics picsrow2">
+                        <img src="/ressources/carousel/webp/night.webp" class="pic rounded float-start" alt="...">
+                        <img src="/ressources/carousel/webp/rem.webp" class="pic rounded float-end" alt="...">
+                        <img src="/ressources/carousel/webp/watcher.webp" class="pic rounded float-end" alt="...">
+                        <img src="/ressources/carousel/webp/kirby.webp" class="pic rounded float-end" alt="...">
+                        <img src="/ressources/carousel/webp/ayka.webp" class="pic rounded float-end" alt="...">
+                    </div>
+                </div>
                 <p>* Voici un aperçu de certains de mes travaux/work in progress :</p>
                 <div class="wips">
                     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
@@ -182,10 +199,10 @@
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="/ressources/carousel/webp/CL - RoA.webp" class="d-block w-100" alt="...">
+                                <img src="/ressources/carousel/webp/godot.webp" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>Clairen - Rivals Of Aether</h5>
-                                    <p>Fan art d'un personnage de jeu vidéo</p>
+                                    <h5>WIP - Prototype de premier build</h5>
+                                    <p>Le développement de mon jeu sur le moteur Godot Engine</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
@@ -198,15 +215,15 @@
                             <div class="carousel-item">
                                 <img src="/ressources/carousel/webp/blender2.webp" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>Third slide label</h5>
-                                    <p>Some representative placeholder content for the third slide.</p>
+                                    <h5>WIP - Modèle 3D de personnage</h5>
+                                    <p>La progression d'un modèle 3D sur lequel je travaille</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="/ressources/carousel/webp/nocturne.webp" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>Fourth slide label</h5>
-                                    <p>Some representative placeholder content for the fourth slide.</p>
+                                    <h5>WIP - Concept Art Jeu</h5>
+                                    <p>Un concpet art d'un monde de mon projet de jeu</p>
                                 </div>
                             </div>
                         </div>
