--- a/index.html
+++ b/index.html
@@ -173,15 +173,22 @@
                         <img src="/ressources/carousel/webp/CL - RoA.webp" class="pic rounded float-start" alt="...">
                         <img src="/ressources/carousel/webp/fate.webp" class="pic rounded float-end" alt="...">
                         <img src="/ressources/carousel/webp/imagination.webp" class="pic rounded float-end" alt="...">
-                        <img src="/ressources/carousel/webp/legend.webp" class="pic rounded float-end" alt="...">
-                        <img src="/ressources/carousel/webp/mf.webp" class="pic rounded float-end" alt="...">
                     </div>
                     <div class="pics picsrow2">
-                        <img src="/ressources/carousel/webp/night.webp" class="pic rounded float-start" alt="...">
-                        <img src="/ressources/carousel/webp/rem.webp" class="pic rounded float-end" alt="...">
+                        <img src="/ressources/carousel/webp/legend.webp" class="pic rounded float-start" alt="...">
+                        <img src="/ressources/carousel/webp/mf.webp" class="pic rounded float-end" alt="...">
+                        <img src="/ressources/carousel/webp/night.webp" class="pic rounded float-end" alt="...">
+                    </div>
+                    <div class="pics picsrow3">
+                        <img src="/ressources/carousel/webp/rem.webp" class="pic rounded float-start" alt="...">
                         <img src="/ressources/carousel/webp/watcher.webp" class="pic rounded float-end" alt="...">
                         <img src="/ressources/carousel/webp/kirby.webp" class="pic rounded float-end" alt="...">
-                        <img src="/ressources/carousel/webp/ayka.webp" class="pic rounded float-end" alt="...">
+                    </div>
+                    <div class="pics picsrow4">
+                        <img src="/ressources/carousel/webp/ayka.webp" class="pic rounded float-start" alt="...">
+                        <img src="/ressources/carousel/webp/keith.webp" class="pic rounded float-end" alt="...">
+                        <img src="/ressources/carousel/webp/oboe.webp" class="pic rounded float-end" alt="...">
+                        
                     </div>
                 </div>
                 <p>* Voici un aperçu de certains de mes travaux/work in progress :</p>
