--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <div class="sc6-pg1 sc-page">
                 <p>* MAIL: ethanlerigab@gmail.com</p>
                 <p>* TÉL.: 07 67 08 21 95</p>
-                <p>* DISCORD: bocal.#1414</p><br>
+                <p>* DISCORD: BauKo.#1414</p><br>
                 <p>* TWITTER: <a target="_blank" href="https://twitter.com/BauKoArt">@BauKoArt</a></p>
                 <p>* INSTAGRAM: <a target="_blank" href="https://www.instagram.com/bauko.art/">@bauko.art</a></p>
                 <p>* SOUNDCLOUD: <a target="_blank" href="https://soundcloud.com/bauko">BauKo.</a></p>
