--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                 <div class="real-box">
                     <p>* Mes réalisations web</p>
                     <div calss="realisations">
-                        <a class="real-lien" href="https://brief6-ethan.projets.lecoledunumerique.fr/">- Bookmarks Registry</a><br>
-                        <a class="real-lien" href="https://abalesbois.projets.lecoledunumerique.fr/">- Project Abalesbois</a><br>
-                        <a class="real-lien" href="https://montgolfiere.projets.lecoledunumerique.fr/">- Project Montgolfière</a><br>
+                        <a class="real-lien" target="_blank" href="https://brief6-ethan.projets.lecoledunumerique.fr/">- Bookmarks Registry</a><br>
+                        <a class="real-lien" target="_blank" href="https://abalesbois.projets.lecoledunumerique.fr/">- Project Abalesbois</a><br>
+                        <a class="real-lien" target="_blank" href="https://montgolfiere.projets.lecoledunumerique.fr/">- Project Montgolfière</a><br>
                     </div>
                 </div>
             </div>
