🎨 update : correction fautes

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                     <img class="screen" src="ressources/webp/blender.webp">
                     <img class="screen" src="ressources/webp/unity.webp">
                 </div>
-                <p>* J'aimerai beaucoup par exemple apprendre la création de modèles et d'animations 3D (personnages ou
+                <p>* J'aimerai beaucoup, par exemple, apprendre la création de modèles et d'animations 3D (personnages ou
                     environement)
-                    par Blender ou autres logiciels, et j'apprends actuellement à utiliser des moteurs de jeux comme
+                    sur Blender ou autres logiciels. J'apprends actuellement à utiliser des moteurs de jeux comme
                     Unity ou Godot Engine.</p>
             </div>
         </section>
@@ -83,7 +83,7 @@
                         * J’ai fais mes années lycée au Lycée Lafayette de Clermont-Ferrand. J’ai fait un BAC Général
                         Technologique en STI2D (Sciences et Technologies de l’Industrie et du Développement Durable)
                         option
-                        ITEC (Innovation Technologique et Éco-Conception). Mais ce que j'y faisais ne m'intéressait pas
+                        ITEC (Innovation Technologique et Éco-Conception). Mais ce que j'ai appris là-bas ne m'intéressait pas
                         tellement. J’ai toutefois réussi à obtenir mon bac avec mention assez bien !
                     </p>
                 </div>
@@ -146,9 +146,12 @@
                 <div class="real-box">
                     <p>* Mes réalisations web</p>
                     <div calss="realisations">
-                        <a class="real-lien" target="_blank" href="https://brief6-ethan.projets.lecoledunumerique.fr/">- Bookmarks Registry</a><br>
-                        <a class="real-lien" target="_blank" href="https://abalesbois.projets.lecoledunumerique.fr/">- Project Abalesbois</a><br>
-                        <a class="real-lien" target="_blank" href="https://montgolfiere.projets.lecoledunumerique.fr/">- Project Montgolfière</a><br>
+                        <a class="real-lien" target="_blank" href="https://brief6-ethan.projets.lecoledunumerique.fr/">-
+                            Bookmarks Registry</a><br>
+                        <a class="real-lien" target="_blank" href="https://abalesbois.projets.lecoledunumerique.fr/">-
+                            Project Abalesbois</a><br>
+                        <a class="real-lien" target="_blank" href="https://montgolfiere.projets.lecoledunumerique.fr/">-
+                            Project Montgolfière</a><br>
                     </div>
                 </div>
             </div>
@@ -196,7 +199,7 @@
                         <img src="/ressources/carousel/webp/ayka.webp" class="pic rounded float-start" alt="...">
                         <img src="/ressources/carousel/webp/keith.webp" class="pic rounded float-end" alt="...">
                         <img src="/ressources/carousel/webp/oboe.webp" class="pic rounded float-end" alt="...">
-                        
+
                     </div>
                 </div>
                 <p>* Voici un aperçu de certains de mes travaux/work in progress :</p>
